--- a/Copy_of_Introduction_to_Colab_and_Python23.ipynb
+++ b/Copy_of_Introduction_to_Colab_and_Python23.ipynb
@@ -454,6 +454,34 @@
         "**Learn More**\n",
         "*   Check out [this](https://www.youtube.com/watch?v=inN8seMm7UI&list=PLQY2H8rRoyvwLbzbnKJ59NkZvQAW9wLbx&index=3) episode of #CodingTensorFlow, and don't forget to subscribe to the YouTube channel ;)\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Xcgwoa_2auus",
+        "colab_type": "text"
+      },
+      "source": [
+        "Intro exercise\n",
+        "\n",
+        "\n",
+        "> Indented block\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "z0u6T8Caa4pu",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "for week in range (1,5,1):\n",
+        "     print (\"enjoy week {} !\" .format(week) )\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
